注册验证码

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11966,3 +11966,11 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+
+/* User register page */
+.register-page img.captcha {
+  cursor: pointer;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  padding: 3px;
+}
